--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 body {
   margin: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(135deg, #3bba5f, #1e1e1e);
+  background: linear-gradient(135deg, #fb8734, #1e1e1e);
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -63,7 +63,7 @@ body {
 h1 {
   margin-bottom: 20px;
   font-size: 2rem;
-  color: #ffb224;
+  color: #50ff24;
   text-shadow: 0 0 10px rgba(235, 248, 0, 0.6);
 }
 
@@ -74,7 +74,7 @@ h1 {
 }
 
 button {
-  background: #e7ea1a;
+  background: #1aea63b4;
   border: none;
   padding: 12px 20px;
   margin: 10px;
@@ -86,7 +86,7 @@ button {
 }
 
 button:hover {
-  background: #f4a21e;
+  background: #77f41e;
   transform: scale(1.05);
 }
 
